This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: md_state is not released
Type: Stage:
Components: Versions: Python 3.0, Python 3.1
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: pitrou Nosy List: benjamin.peterson, loewis, pitrou
Priority: release blocker Keywords: patch

Created on 2009-01-04 23:16 by loewis, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
issue4838.patch pitrou, 2009-01-17 20:45
Messages (4)
msg79095 - (view) Author: Martin v. Löwis (loewis) * (Python committer) Date: 2009-01-04 23:16
module_dealloc should free md_state if it is non-zero, after m_free was
called.
msg80044 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-01-17 20:45
Here is a patch. I'm not sure if I'm missing something here, since it
looks trivial.
msg80045 - (view) Author: Martin v. Löwis (loewis) * (Python committer) Date: 2009-01-17 20:46
Looks fine, please apply.
msg80050 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-01-17 21:40
Fixed in r68669.
History
Date User Action Args
2022-04-11 14:56:43adminsetnosy: + benjamin.peterson
github: 49088
2009-01-17 21:41:00pitrousetstatus: open -> closed
resolution: accepted -> fixed
messages: + msg80050
2009-01-17 20:46:50loewissetassignee: pitrou
resolution: accepted
messages: + msg80045
2009-01-17 20:45:03pitrousetfiles: + issue4838.patch
keywords: + patch
messages: + msg80044
nosy: + pitrou
2009-01-04 23:16:29loewiscreate