Issue #4838: When a module is deallocated, free the memory backing the optional module state data.